--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
 	"name": "vscode-JS-CSS-HTML-formatter",
 	"displayName" : "JS-CSS-HTML Formatter",
-	"description": "Formatter for JS, CSS, HTML",
-	"version": "0.0.1",
+	"description": "Format and beautify JS, CSS, HTML code by using shortkey or mouse button",
+	"version": "0.0.6",
 	"publisher": "lonefy",
     "galleryBanner": {
-        "color": "#0000FF",
-        "theme": "dark"
+        "color": "#ddd",
+        "theme": "light"
     },
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/lonefy/vscode-js-css-html-formatter/issues",
-        "email": "smcbreen@microsoft.com"
+        "email": "lonefy@foxmail.com"
     },
     "homepage": "https://github.com/lonefy/vscode-js-css-html-formatter/blob/master/README.md",
     "repository": {
