--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-JS-CSS-HTML-formatter",
     "displayName": "JS-CSS-HTML Formatter",
     "description": "Format ,prettify and beautify JS, CSS, HTML code by using shortcuts, context menu or CLI",
-    "version": "0.2.1",
+    "version": "0.2.2",
     "publisher": "lonefy",
     "galleryBanner": {
         "color": "#eee",
@@ -49,8 +49,8 @@
     },
     "main": "./out/src/extension",
     "scripts": {
-        "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
-        "compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
+        "vscode:prepublish": "tsc -p ./",
+        "compile": "tsc -watch -p ./",
         "postinstall": "node ./node_modules/vscode/bin/install"
     },
     "dependencies": {
@@ -58,7 +58,7 @@
         "mkdirp": "^0.5.1"
     },
     "devDependencies": {
-        "typescript": "^1.8.5",
-        "vscode": "0.11.0"
+        "typescript": "^2.0.3",
+        "vscode": "^1.0.0"
     }
 }
