--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     },
     "categories": [
         "Other",
-        "Formatter",
+        "Formatters",
         "Languages"
     ],
     "license": "MIT",
